.infra/k8s-specifications/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /vote/?(.*)
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 8080
          - path: /result/?(.*)
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 8081
